Tue Dec  7 10:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSButtonCell.m: ([-drawInteriorWithFrame:inView:]) fix code
	for drawing images above and below text, and add support for
	drawing in a flipped view.

Tue Dec  7  7:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBrowser.m: ([-setPath:]) applied fix suggested by
	georg@das.ist.org

Tue Dec  7 06:23:07 1999  Nicola Pero  <n.pero@mi.flashnet.it>

	Major improvements of the save panel and the open panel.
	* Headers/AppKit/NSWindow.h: Prefixed ivar delegate with
 	underscore.
	* Source/NSWindow.m: Prefixed ivar delegate with underscore.

	* Headers/AppKit/NSSavePanel.h: Changed ivars.
	* Source/NSSavePanel.m:
	([NSFileManager -_directoryContentsAtPath:showHidden:]): Removed.
	([NSFileManager -hiddenFilesAtPath:]): Removed.
	([-_initWithoutGModel]): Removed setMinSize in excess; set
 	title of window to @"".  
	([-setTitle:]): Dont set window title to @"".
  	([-_setDirectory:updateBrowser:]): Removed method.	
  	([-_resetDefaults]): New method.  
	([+initialize]): New method.
	([+savePanel]): Moved all reset defaults code to _resetDefaults.
	([-dealloc]): New method.
	([-init]): Some changings.
	([-setAccessoryView:]): Access content view directly.
	([-setDirectory:]): Updated.
	([-runModalForDirectory:path:filename]): Updated, fixed.
	([-directory]): New better implementation.
	([-cancel:]): set directory to nil.
	([-cancel:]), ([-ok:]): Changed from orderOut: to close:.
	([-setDelegate:]): Cleaned, fixed.
	([-browser:createRowsForColumn:inMatrix:]): Rewritten, much better.
	([-browser:selectCellWithString:inColumn:]): Rewritten, much better.
	([-controlTextDidEndEditing:]): Improved, still to finish.

	* Source/NSOpenPanel.m: Updated for changing in NSSavePanel.  
	([-_resetDefaults]): New method.
	([-_shouldShowExtension:]): New method.
	([+openPanel]):	Updated.
	([-runModalForDirectory:file:types:]): Updated.